Update light gray and near white

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -19,8 +19,8 @@
   --silver: #999;
   --light-silver: #aaa;
   --moon-gray: #ccc;
-  --light-gray: #eee;
-  --near-white: #f4f4f4;
+  --light-gray: #edf0f2; /* CUSTOMIZED -- Default #eee */
+  --near-white: #fafdff; /* CUSTOMIZED -- Default #f4f4f4 */
   --white: #fff;
 
   --transparent:transparent;
