More color updates for NI

--- a/src/_colors.css
+++ b/src/_colors.css
@@ -16,7 +16,7 @@
   --dark-gray:#333;
   --mid-gray:#555;
   --gray: #777;
-  --silver: #999;
+  --silver: #9ba7b3; /* CUSTOMIZED -- Default #999 */
   --light-silver: #aaa;
   --moon-gray: #ccc;
   --light-gray: #edf0f2; /* CUSTOMIZED -- Default #eee */
@@ -52,7 +52,7 @@
  --white-0125: rgba(255,255,255,.0125);
 
   --dark-red:  #e7040f;
-  --red:  #ff4136;
+  --red:  #d64040; /* CUSTOMIZED -- Default #ff4136 */
   --light-red:  #ff725c;
   --orange:  #ff6300;
   --gold:  #ffb700;
@@ -65,12 +65,12 @@
   --pink:  #ff80cc;
   --light-pink:  #ffa3d7;
   --dark-green:  #137752;
-  --green:  #19a974;
+  --green:  #26bf66; /* CUSTOMIZED -- Default #19a974 */
   --light-green:  #9eebcf;
   --navy:  #001b44;
   --dark-blue:  #00449e;
   --blue:  #357edd;
-  --light-blue:  #96ccff;
+  --light-blue:  #419fd9; /* CUSTOMIZED -- Default #96ccff */
   --lightest-blue:  #cdecff;
   --washed-blue:  #f6fffe;
   --washed-green:  #e8fdf5;
