--- a/src/tachyons.css
+++ b/src/tachyons.css
@@ -23,10 +23,8 @@
  *
  */
 
-
 /* External Library Includes */
 @import './_normalize';
-
 
 /* Modules */
 @import './_box-sizing';
@@ -85,6 +83,9 @@
 /* Importing here will allow you to override any variables in the modules */
 @import './_colors';
 @import './_media-queries';
+
+/* NI Overrides */
+@import './_colors-custom';
 
 /* Debugging */
 @import './_debug-children';
